[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icon/arrow.png" type="Texture" id=3]
[ext_resource path="res://gameplay/mp/ui/mp_death_screen/mp_death_screen.gd" type="Script" id=4]

[node name="mp_death_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 600.0
margin_bottom = 157.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 2 )
text = "Your Drone
Is Dead!"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 600.0
margin_bottom = 716.0
rect_min_size = Vector2( 80, 60 )
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 720.0
margin_right = 600.0
margin_bottom = 840.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 120.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="prev" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 182.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 80 )
flat = true

[node name="Label" type="TextureRect" parent="VBoxContainer/HBoxContainer/prev"]
modulate = Color( 1, 1, 1, 0.678431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 196.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="respawn" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 200.0
margin_right = 400.0
button_color = Color( 0.403922, 0.403922, 0.403922, 1 )
button_label = "Respawn"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 414.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="next" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 418.0
margin_right = 518.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 80 )
flat = true

[node name="Label" type="TextureRect" parent="VBoxContainer/HBoxContainer/next"]
modulate = Color( 1, 1, 1, 0.678431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 522.0
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 844.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 80, 180 )
mouse_filter = 2

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/next" to="." method="_on_next_pressed"]
